scripts/k8s/apostrophe.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: $PHR2_NAMESPACE
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apostrophe-${PHR2_NAMESPACE}
  namespace: $PHR2_NAMESPACE
spec:
  selector:
    matchLabels:
      app: apostrophe-${PHR2_NAMESPACE}
  template:
    metadata:
      labels:
        app: apostrophe-${PHR2_NAMESPACE}
    spec:
      containers:
      - name: apostrophe-${PHR2_NAMESPACE}
        image: ${PHR_REGISTRY}/${PHR2_NAMESPACE}-apostrophe:v${BUILD_NUMBER}
        ports:
        - containerPort: 80
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: apostrophe-${PHR2_NAMESPACE}
  namespace: $PHR2_NAMESPACE
spec:
  selector:
    app: apostrophe-${PHR2_NAMESPACE}
  ports:
  - port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apostrophe-${PHR2_NAMESPACE}
  namespace: $PHR2_NAMESPACE
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - $PHR2_DOMAIN
    secretName: tls-secret-prod
  rules:
  - host: $PHR2_DOMAIN
    http:
      paths:
      - backend:
          serviceName: apostrophe-${PHR2_NAMESPACE}
          servicePort: 80
        path: /
